--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Jul  6 14:59:54 2005  Witold Filipczyk <witekfl@poczta.gazeta.pl>:
+
+	* po/pl.po:
+
+	Polish translation was updated. Use proper plural forms.  
+
 Tue Jul  5 19:48:14 2005  Laurent Monin <zas@norz.org>:
 
 	* test/comments.html:
